Fixing Bug where game was not showing up at top of screen

--- a/sprint2/OurApp/static/css/main.css
+++ b/sprint2/OurApp/static/css/main.css
@@ -7,8 +7,8 @@ html{
 }
 
 main{
-    width:100%;
-    height:1000px;
+    width:0%;
+    height:0px;
     padding-top: 0%;
     display:flex;
 }
